components/app-configs/nim/base/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: llama3
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    spec:
      containers:
      - name: nim
        image: 'nvcr.io/nim/meta/llama3-8b-instruct:1.0.0'
        ports:
        - containerPort: 8000
          protocol: TCP
          name: api
        resources:
          limits:
            cpu: '2'
            memory: 8Gi
          requests:
            cpu: 500m
            memory: 8Gi
        # livenessProbe:
        #   httpGet:
        #     path: /
        #     port: http
        #     scheme: HTTP
        #   timeoutSeconds: 5
        #   periodSeconds: 5
        #   successThreshold: 1
        #   failureThreshold: 3
        # readinessProbe:
        #   httpGet:
        #     path: /
        #     port: notebook
        #     scheme: HTTP
        #   timeoutSeconds: 1
        #   periodSeconds: 10
        #   successThreshold: 1
        #   failureThreshold: 3
        # startupProbe:
        #   httpGet:
        #     path: /
        #     port: notebook
        #     scheme: HTTP
        #   timeoutSeconds: 1
        #   periodSeconds: 5
        #   successThreshold: 1
        #   failureThreshold: 10
        volumeMounts:
          - name: shm
            mountPath: /dev/shm
          - name: nim-cache
            mountPath: /opt/nim/.cache
            subPath: data
      volumes:
        - name: shm
          emptyDir:
            medium: Memory
            sizeLimit: 512Mi
        - name: nim-cache
          persistentVolumeClaim:
            claimName: nim
