components/app-configs/nim/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nim
spec:
  ports:
  - name: api
    port: 8000
    targetPort: 8000
  sessionAffinity: None
  type: ClusterIP
