components/app-configs/nim/base/route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: nim
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  port:
    targetPort: 8000
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: nim
    weight: 100
  wildcardPolicy: None
